# qadam_demo

./: .env  .env.example  pyproject.toml  requirements.txt  run_bot.py  run_server.py
qadam_demo/: .env  .env.example  README.md  bot.py  index.html  requirements.txt  script.js  server.py  style.css
src/qadam_demo/: __init__.py  cart.py  config.py  main.py  menu.py  server.py
src/qadam_demo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/qadam_demo/handlers/: __init__.py  admin.py  menu.py  start.py
src/qadam_demo/static/: index.html  script.js  style.css
